@@ -31,6 +31,10 @@ require("e2local")
 require("e2tool")
 require("e2build")
 e2lib.init()
+local info, re = e2tool.local_init(nil, "dsort")
+if not info then
+  e2lib.abort(re)
+end
 
 e2option.documentation = [[
 usage: e2-dsort
@@ -40,7 +44,7 @@ lists all results sorted by dependency
 
 e2option.parse(arg)
 
-local info, re = e2tool.collect_project_info()
+info, re = e2tool.collect_project_info(info)
 if not info then
   e2lib.abort(re)
 end
