@@ -31,6 +31,10 @@ require("e2local")
 require("e2tool")
 require("e2build")
 e2lib.init()
+local info, re = e2tool.local_init(nil, "fetch-sources")
+if not info then
+  e2lib.abort(re)
+end
 
 e2option.documentation = [[
 usage: e2-fetch-sources <source> ...
@@ -67,7 +71,7 @@ e2option.flag("source", "select sources by source names (default)")
 e2option.flag("result", "select sources by result names")
 
 local opts = e2option.parse(arg)
-local info, re = e2tool.collect_project_info()
+info, re = e2tool.collect_project_info(info)
 if not info then
   e2lib.abort(re)
 end
