@@ -31,6 +31,10 @@ require("e2local")
 require("e2tool")
 require("e2build")
 e2lib.init()
+local info, re = e2tool.local_init(nil, "playground")
+if not info then
+  e2lib.abort(re)
+end
 
 local e = new_error("entering playground failed")
 local rc, re
@@ -50,7 +54,7 @@ local build_mode = policy.handle_commandline_options(opts, true)
 if not build_mode then
 	e2lib.abort("no build mode given")
 end
-local info, re = e2tool.collect_project_info()
+info, re = e2tool.collect_project_info(info)
 if not info then
   e2lib.abort(re)
 end
